--- a/src/options/index.html
+++ b/src/options/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>ChatGPT for Google</title>
+    <title>aiGPT for aiDrive Ecosystem and Google</title>
     <link rel="stylesheet" href="options.css" />
   </head>
   <body>
